# sovren

./: .clang-format  .clang-tidy  .gitignore  Directory.Build.props  Directory.Build.targets  README.md  RENI.sln  TODO.md  meson.build
Docs/: Doxyfile
Include/RENI/: BackendFactory.hpp  Canvas.hpp  Color.hpp  EventLoop.hpp  EventObserver.hpp  EventQueue.hpp  Events.hpp  GuiApp.hpp  KeyInput.hpp  Keys.hpp  KeysState.hpp  LockedPtr.hpp  Log.hpp  MouseButtons.hpp  MouseInput.hpp  MouseState.hpp  NonCopyable.hpp  NonMovable.hpp  Point2D.hpp  RENI.hpp  Render.hpp  RenderBackend.hpp  RenderDevice.hpp  RenderEngine.hpp  RenderGraph.hpp  RenderTarget.hpp  RenderThread.hpp  RenderWindow.hpp  Size2D.hpp  SwapChain.hpp  Ui.hpp  UiEventLoop.hpp  UiMainLoop.hpp  Utils.hpp  Window.hpp  WindowHandle.hpp  WindowSystem.hpp  rg.hpp  util_types.hpp
Include/RENI/rg/: Line2D.hpp  NodeVisitor.hpp  Rect2D.hpp  RenderNode.hpp
Include/reni/: pal.hpp  print.hpp  rhi.hpp  utils.hpp
Include/reni/pal/: EventPoller.hpp  Platform.hpp  Render.hpp  RenderBackend.hpp  RenderTarget.hpp  SwapChain.hpp  Window.hpp  WindowCallbacks.hpp  dx.hpp
Include/reni/rhi/: CommandList.hpp  RenderBackend.hpp  RenderContext.hpp  RenderTarget.hpp  SwapChain.hpp
Include/reni/util/: NonCopyable.hpp  Point2.hpp  Point2D.hpp  types.hpp
Include/reni/utils/: NonCopyable.hpp  NonMovable.hpp
Source/: EventQueue.cpp  Events.cpp  GuiApp.cpp  Keys.cpp  KeysState.cpp  KeysState.hpp  Log.hpp  MouseButtons.cpp  MouseState.cpp  MouseState.hpp  RENI.cpp  RENI.vcxproj  RenderEngine.cpp  RenderThread.cpp  RenderWindow.cpp  SwapChain.cpp  Utils.cpp  Window.KeysState.cpp  Window.MouseState.cpp  Window.State.cpp  Window.cpp  WindowImplBase.hpp  print.cpp  rg.cpp
Source/DirectX/: D3DRender.cpp  D3DRender.hpp  D3DUtils.hpp  DxRender2D.hpp  DxRenderBackend.hpp  DxRenderDevice.hpp  DxRenderEngine.cpp  DxRenderEngine.hpp  DxRenderTarget.hpp  DxSwapChain.hpp  DxUtils.hpp  DxWindowDevice.cpp  DxWindowDevice.hpp  Render.cpp  utils.hpp
Source/Win32/: BackendFactory.cpp  EventLoop.cpp  GuiApp.cpp  MessageQueue.cpp  MessageQueue.hpp  RenderBackend.cpp  RenderWindow.cpp  Ui.cpp  UiEventLoop.cpp  UiMainLoop.cpp  Win32BackendFactory.hpp  Win32Utils.cpp  Win32Utils.hpp  WinEventQueue.cpp  WinEventQueue.hpp  WinMsgQueue.cpp  WinMsgQueue.hpp  WinUiFactory.cpp  WinUiFactory.hpp  WinUtils.cpp  WinUtils.hpp  WinWindow.cpp  WinWindow.hpp  WinWindowSystem.cpp  WinWindowSystem.hpp  WinWndClass.cpp  WinWndClass.hpp  Window.Impl.cpp  Window.cpp  WindowSystem.cpp  WndClass.cpp  WndClass.hpp  WndProc.cpp  WndProc.hpp  utils.cpp  utils.hpp
Source/Win32/D2D/: D2DCanvas.hpp  D2DUiFactory.hpp  D2DUtils.hpp
Source/Win32/DIrectX/: D3DRender.cpp  D3DRender.hpp  DXUtils.hpp
Source/pal/: Platform.cpp  RenderBackend.cpp
Testing/: Testing.vcxproj  main.cpp
app/: main.cpp  meson.build
doc/: meson.build
docs/: Doxyfile  Doxyfile.in  meson.build
include/reni/: RenderGraph.hpp  RenderWindow.hpp  core.hpp  math.hpp  pal.hpp  print.hpp  reni.hpp  rg.hpp  rhi.hpp  util.hpp
include/reni/core/: Key.hpp  Keys.hpp  MouseButton.hpp  MouseButtons.hpp  RenderGraph.hpp  RenderWindow.hpp  Renderer.hpp  SceneGraph.hpp  Window.hpp
include/reni/log/: ConsoleLogger.hpp  Log.hpp  LogKind.hpp  LogMessage.hpp  LogMessageFormat.hpp  LogTag.hpp  Logger.hpp
include/reni/math/: Mat.hpp  Mat2x2.hpp  Mat3x3.hpp  Mat4x4.hpp  MatBase.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  VecBase.hpp  mat_ops.hpp  ops.hpp  types.hpp  util.hpp  vec_ops.hpp
include/reni/pal/: EventPoller.hpp  Platform.hpp  Window.hpp  WindowCallbacks.hpp  win32.hpp
include/reni/rg/: Camera3D.hpp  CameraNode.hpp  Line2D.hpp  NodeVisitor.hpp  OrthoCamera3D.hpp  PerspCamera3D.hpp  Rect2D.hpp  RenderNode.hpp  SceneNode.hpp  Transform2D.hpp  Transform3D.hpp  Triangle3D.hpp
include/reni/rhi/: CommandList.hpp  RenderBackend.hpp  RenderContext.hpp  RenderTarget.hpp  SwapChain.hpp  VertexBuffer.hpp  dx.hpp
include/reni/sg/: NodeVisitor.hpp  OrthoCamera3D.hpp  Rect2D.hpp  SceneNode.hpp  Transform2D.hpp  Transform3D.hpp  Triangle3D.hpp
include/reni/util/: Color.hpp  Displace2.hpp  Displace3.hpp  Mat4x4.hpp  NonCopyable.hpp  NonMovable.hpp  Point2.hpp  Point3.hpp  Size2.hpp  Size3.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  types.hpp
include/sovren/: Color.hpp  Point2.hpp  RenderView.hpp  SceneGraph.hpp  Size2.hpp  print.hpp  sovren.hpp
include/sovren/core/: Key.hpp  MouseButton.hpp  RenderWindow.hpp  Renderer.hpp  SceneGraph.hpp  Window.hpp
include/sovren/input/: EventHandler.hpp  Keys.hpp
include/sovren/log/: ConsoleLogger.hpp  Log.hpp  LogKind.hpp  LogMessage.hpp  LogMessageFormat.hpp  LogTag.hpp  Logger.hpp
include/sovren/math/: Mat.hpp  Mat2x2.hpp  Mat3x3.hpp  Mat4x4.hpp  MatBase.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  VecBase.hpp  mat_ops.hpp  math.hpp  util.hpp  vec_ops.hpp
include/sovren/pal/: EventPoller.hpp  (+6 more)
src/: config.hpp.in  math.cpp  meson.build  print.cpp  rg.cpp  sg.cpp  win32.cpp
src/core/: RenderWindow.cpp  Renderer.cpp  Window.cpp  meson.build
src/dx/: DxRenderBackend.cpp  DxRenderContext.cpp  DxRenderTarget.cpp  DxSwapChain.cpp  DxVertexBuffer.cpp  ShaderCode.cpp  meson.build
src/dx/shaders/: ps.hlsl  vs.hlsl
src/dx11/: ShaderCode.cpp  meson.build
src/log/: ConsoleLogger.cpp  Log.cpp  meson.build
src/math/: matrices.cpp  meson.build
src/sovren/: meson.build
src/win32/: Platform.cpp  Win32EventPoller.cpp  Win32Platform.cpp  Win32Window.cpp  WndClass.cpp  meson.build  util.cpp
test/: Mat2x2Test.cpp  Mat3x3Test.cpp  Mat4x4Test.cpp  MatrixOperations2D.cpp  MatrixOperations3D.cpp  MatrixOperations4D.cpp  RenderTest.cpp  Vec2Test.cpp  Vec3Test.cpp  Vec4Test.cpp  VectorOperations2D.cpp  VectorOperations3D.cpp  VectorOperations4D.cpp  meson.build
tests/: .clang-format  .clang-tidy  MatrixOperations2D.cpp  MatrixOperations3D.cpp  OverloadSet.hpp  RenderTest.cpp  VectorOperations2D.cpp  VectorOperations3D.cpp  VectorOperations4D.cpp  matrix_math.cpp  matrix_math_test.cpp  meson.build  render.cpp  util.hpp  vector_math.cpp  vector_math_test.cpp
tests/src/: main.cpp
(+104 files in other folders)
